--- a/.gitignore
+++ b/.gitignore
@@ -9,12 +9,14 @@
 *.xls
 *.ods
 
-# Hide temporary versions of scripts from git
+# Hide temporary versions of files from git
 *[1-9].awk
 *[1-9].jl
 *[1-9].js
+*[1-9].json
 *[1-9].py
 *[1-9].sh
+*[1-9].xml
 
 # Local backups
 *.bak
