--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@
 # Output from running any commands
 *.csv
 *.jl
-*.json
 *.txt
 *.xml
 
@@ -15,6 +14,7 @@
 # Hide temporary versions of files from git
 *[1-9].awk
 *[1-9].js
+*[1-9].json
 *[1-9].py
 *[1-9].sh
 
