--- a/getBritBox1SeasonFrom-webscraper.json
+++ b/getBritBox1SeasonFrom-webscraper.json
@@ -1,10 +1,16 @@
 {
   "_id": "one_season_show",
   "startUrl": [
+    "https://www.britbox.com/us/movie/70_Glorious_Years_13550",
+    "https://www.britbox.com/us/movie/A_Christmas_Carol_15128",
     "https://www.britbox.com/us/show/New_Blood_9275",
     "https://www.britbox.com/us/show/Till_Death_Us_Do_Part_15810",
-    "https://www.britbox.com/us/movie/70_Glorious_Years_13550",
-    "https://www.britbox.com/us/movie/A_Christmas_Carol_15128"
+    "https://www.britbox.com/us/show/A_History_of_Ancient_Britain_6385",
+    "https://www.britbox.com/us/show/A_Bit_of_Fry_and_Laurie_6393",
+    "https://www.britbox.com/us/show/The_Jury_9565",
+    "https://www.britbox.com/us/season/Vera_S8_15720",
+    "https://www.britbox.com/us/episode/Superhomes_S1_E1_9008",
+    "https://www.britbox.com/us/episode/Cold_Blood_S2_E2_10298"
   ],
   "selectors": [
     {
@@ -70,7 +76,7 @@
       "delay": ""
     },
     {
-      "id": "URLs",
+      "id": "URL",
       "type": "SelectorElementAttribute",
       "selector": "a.program-item__block",
       "parentSelectors": ["Program"],
