--- a/getBritBoxSeasonsFrom-webscraper.json
+++ b/getBritBoxSeasonsFrom-webscraper.json
@@ -1,99 +1,64 @@
 {
-  "_id": "britbox_seasons",
-  "startUrl": [
-    "https://www.britbox.com/us/movie/70_Glorious_Years_13550",
-    "https://www.britbox.com/us/movie/A_Christmas_Carol_15128",
-    "https://www.britbox.com/us/show/A_Bit_of_Fry_and_Laurie_6393",
-    "https://www.britbox.com/us/show/A_History_of_Ancient_Britain_6385",
-    "https://www.britbox.com/us/show/New_Blood_9275",
-    "https://www.britbox.com/us/show/The_Jury_9565",
-    "https://www.britbox.com/us/show/Till_Death_Us_Do_Part_15810",
-    "https://www.britbox.com/us/show/Vera_13500"
-  ],
+  "_id": "BritBoxSeasons",
+  "startUrl": ["https://www.britbox.com/us/programmes"],
   "selectors": [
     {
-      "id": "ProgramInfo",
-      "type": "SelectorElement",
-      "selector": "div.brand-hero-info",
+      "id": "PgmURL",
+      "type": "SelectorLink",
+      "selector": "div.program-item a[href*='/us/show/'].program-item__block",
       "parentSelectors": ["_root"],
-      "multiple": false,
-      "delay": ""
+      "multiple": true,
+      "delay": "8000"
     },
     {
-      "id": "ProgramTitle",
-      "type": "SelectorText",
-      "selector": "h1.brand-hero-info__title",
-      "parentSelectors": ["ProgramInfo"],
-      "multiple": false,
-      "regex": "",
-      "delay": ""
-    },
-    {
-      "id": "SeasonCarousel",
-      "type": "SelectorElement",
-      "selector": "div.carousel__content",
-      "parentSelectors": ["_root"],
-      "multiple": false,
-      "delay": ""
-    },
-    {
-      "id": "Season",
-      "type": "SelectorElement",
-      "selector": "a.brand-season-item",
-      "parentSelectors": ["SeasonCarousel"],
+      "id": "SsnURL",
+      "type": "SelectorLink",
+      "selector": "a[href*='/us/season/'].brand-season-item",
+      "parentSelectors": ["PgmURL"],
       "multiple": true,
       "delay": ""
     },
     {
-      "id": "URL",
-      "type": "SelectorElementAttribute",
-      "selector": "a.brand-season-item",
-      "parentSelectors": ["Season"],
-      "multiple": false,
-      "extractAttribute": "href",
-      "delay": ""
-    },
-    {
-      "id": "SeasonTitle",
+      "id": "Program_Title",
       "type": "SelectorText",
-      "selector": "h2.program-item__program-title",
-      "parentSelectors": ["Season"],
+      "selector": "h3.program-item__program-title",
+      "parentSelectors": ["PgmURL"],
       "multiple": false,
       "regex": "",
       "delay": ""
     },
     {
-      "id": "SeasonNumber",
+      "id": "Sn_Title",
       "type": "SelectorText",
-      "selector": "h2.program-item__program-title",
-      "parentSelectors": ["Season"],
+      "selector": "a.brand-season-item.active h2.program-item__program-title",
+      "parentSelectors": ["SsnURL"],
       "multiple": false,
-      "regex": "^(Season|Series) \\d+$",
+      "regex": "",
       "delay": ""
     },
     {
-      "id": "Year",
+      "id": "Sn_Years",
+      "type": "SelectorText",
+      "selector": "a.brand-season-item.active p.season-metadata.hero-text",
+      "parentSelectors": ["SsnURL"],
+      "multiple": false,
+      "regex": "^\\d+",
+      "delay": ""
+    },
+    {
+      "id": "Sn_Epis",
       "type": "SelectorText",
       "selector": "p.season-metadata",
-      "parentSelectors": ["Season"],
+      "parentSelectors": ["SsnURL"],
       "multiple": false,
-      "regex": "(\\d+)",
+      "regex": "\\d+ Episodes?",
       "delay": ""
     },
     {
-      "id": "NumEpisodes",
-      "type": "SelectorText",
-      "selector": "p.season-metadata span",
-      "parentSelectors": ["Season"],
-      "multiple": false,
-      "regex": "(\\d+)",
-      "delay": ""
-    },
-    {
-      "id": "SeasonDescription",
+      "id": "Sn_Description",
       "type": "SelectorText",
       "selector": "p.brand-hero-info__description",
-      "parentSelectors": ["ProgramInfo"],
+      "parentSelectors": ["SsnURL"],
       "multiple": false,
       "regex": "",
       "delay": ""
