--- a/.gitignore
+++ b/.gitignore
@@ -24,6 +24,7 @@
 # Downloaded data used for examination and testing
 /Acorn-series-html/
 /Acorn-episodes-html/
+/BritBox-scrapes/
 /MHz-series-html/
 /MHz-episodes-html/
 /test-html
