Hide IMDb-baseline & IMDb-columns

--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,8 @@
 /Acorn-series-html/
 /Acorn-episodes-html/
 /BritBox-scrapes/
+/IMDb-baseline/
+/IMDb-columns/
 /MHz-series-html/
 /MHz-episodes-html/
 /test-html
