--- a/Walter-Presents/package.json
+++ b/Walter-Presents/package.json
@@ -11,5 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "playwright": "^1.35.1"
+  },
+  "devDependencies": {
+    "@playwright/test": "^1.41.1"
   }
 }
